style2.css
body {
    margin: 0px; 
    font-family: Arial, Helvetica, sans-serif;
    background-color: #4915f8; 
    
 }
 

 .container {
    display: flex;
    flex-direction: column;
    height: 100%;
    
}




 .section-1 {
     color:white;
     display:flex;
     flex-direction: row;
     align-items: center;
     padding-bottom:15%;
    
     
 }
 
 a:visited {
     color: white;
 }
 
 a:hover{ 
     color:gray;
 }

 input[type='button'] {
    background-color: rgb(255, 153, 0);
    color: white; 
    font-family: Arial; 
    font-weight: bold; 
    border-radius: 20px; 
    width: 100px; 
    padding:9px; 
    margin: 0px;
 }


 input[type='button-2'] {
    background-color: rgb(255, 153, 0);
    color: white; 
    font-family: Arial; 
    font-weight: bold; 
    border-radius: 15px; 
    width: 110px; 
    padding:12px; 
    margin: 0px;
    line-height:1.5;
 }


 .section-2 {
    color: white;
    display:flex;
    flex-direction: row;
    flex: 1;
    
    
 }

 .section-3 {
    color:white;
display:flex;
justify-content: center;
 }


 .section-4 {
    width:100%;
    flex-direction: row;
    align-items:end;
    color:white;

 }

 .container-2 {
    display:flex;
    height:100%;
 }

 .left-side{
    flex: 400px;
    align-items: center;
    justify-content: start;
    
 }

 .right-side{
    flex: 300px;
    padding-right:100px;
    align-items: center;
 }

 

